Bug 1306945 - remove the check of mPlayState in the MDSM::VisibilityChanged(); r=jwwang,kamidphish

MozReview-Commit-ID: JBJJ7dPt64i